--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@ form input, form textarea{
   margin: 10px 0;
   padding: 20px;
   outline: none;
-  background: #b51f1f;
+  border-radius: 20px;
   font-size: 16px;
 }
 
