--- a/css/styles.css
+++ b/css/styles.css
@@ -92,12 +92,11 @@
 }
 
 form{
-  background: #0d5a4b;
+  justify-content: center;
   display: flex;
+  background: #0d5a4b;
   flex-direction: column;
   padding: 2vw 4vw;
-  width: 90%;
-  max-width: 600px;
   border-radius: 10px;
   
 }
